force-app/main/default/objects/S_P_Vendors__c/S_P_Vendors__c.object-meta.xml
<CustomObject>
    <label>S&amp;P Vendors</label>
    <nameField>
        <displayFormat>SV # {000000000}</displayFormat>
        <label>S&amp;P Vendors ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>