force-app/main/default/objects/S_P_Vendors__c/fields/Account_Contacts_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Contacts_Lookup__c</fullName>
    <formula>HYPERLINK(&apos;/apex/SnP_ContactSelectionPage?id=&apos; + Id, &apos;Pull In an Account Contact&apos;,&apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click Add/Update Contacts to enable account contacts lookup</inlineHelpText>
    <label>Account Contacts Lookup</label>
    <type>Text</type>
</CustomField>