force-app/main/default/objects/S_P_Vendors__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>MAJ 16.07 : SnP 200 - Add account owner information to SnP Vendor Record Nutanix</description>
    <formula>Opportunity__r.Account.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>