force-app/main/default/objects/S_P_Vendors__c/fields/Action_taken_within_the_first_21_days__c.field-meta.xml
<CustomField>
    <fullName>Action_taken_within_the_first_21_days__c</fullName>
    <inlineHelpText>What action will be taken within the first 21 days after the registration?</inlineHelpText>
    <label>Action taken within the first 21 days?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference Call With WebSense Rep</fullName>
            </value>
            <value>
                <fullName>Meeting with WebSense Rep</fullName>
            </value>
            <value>
                <fullName>Provide Online Demo</fullName>
            </value>
            <value>
                <fullName>Provide 30 Day Evaluation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>