force-app/main/default/objects/S_P_Vendors__c/fields/Adobe_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Contact_Email__c</fullName>
    <label>Adobe Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>