force-app/main/default/objects/S_P_Vendors__c/fields/Alternative_Solutions_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Solutions_Competitor__c</fullName>
    <label>Alternative Solutions Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>