force-app/main/default/objects/S_P_Vendors__c/fields/APC_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>APC_Account_Team__c</fullName>
    <description>#08434 APC SV form</description>
    <label>APC Account Team</label>
    <type>TextArea</type>
</CustomField>