force-app/main/default/objects/S_P_Vendors__c/fields/APC_Part_No_01_Qnty__c.field-meta.xml
<CustomField>
    <fullName>APC_Part_No_01_Qnty__c</fullName>
    <label>APC Part No. 01 Qnty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>