force-app/main/default/objects/S_P_Vendors__c/fields/APC_Part_No_03__c.field-meta.xml
<CustomField>
    <fullName>APC_Part_No_03__c</fullName>
    <label>APC Part No. 03</label>
    <length>50</length>
    <type>Text</type>
</CustomField>