force-app/main/default/objects/S_P_Vendors__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <inlineHelpText>Which of the following best describes the business or application needs being addressed with this project?</inlineHelpText>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Network Convergence / VoIP</fullName>
            </value>
            <value>
                <fullName>New Computer Room</fullName>
            </value>
            <value>
                <fullName>New Wiring Closet</fullName>
            </value>
            <value>
                <fullName>New Data Center</fullName>
            </value>
            <value>
                <fullName>Storage Systems</fullName>
            </value>
            <value>
                <fullName>Blade Server Deployment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>