force-app/main/default/objects/S_P_Vendors__c/fields/Application_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Application_Vendor__c</fullName>
    <label>Application Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>BMC</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Gale Technologies</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Lawson</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Netapp</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Symantec</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>