force-app/main/default/objects/S_P_Vendors__c/fields/Aruba_Promotional_Code_optional__c.field-meta.xml
<CustomField>
    <fullName>Aruba_Promotional_Code_optional__c</fullName>
    <label>Aruba Promotional Code (optional)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>