force-app/main/default/objects/S_P_Vendors__c/fields/Authority_to_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Authority_to_Purchase__c</fullName>
    <label>Authority to Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>