force-app/main/default/objects/S_P_Vendors__c/fields/Automated__c.field-meta.xml
<CustomField>
    <fullName>Automated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag that will determine if the vendor is implementing the automated process or not</description>
    <label>Automated</label>
    <type>Checkbox</type>
</CustomField>