force-app/main/default/objects/S_P_Vendors__c/fields/Avg_mnthly_print_vol_per_printer_model__c.field-meta.xml
<CustomField>
    <fullName>Avg_mnthly_print_vol_per_printer_model__c</fullName>
    <label>Avg mnthly print vol per printer model?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1000</fullName>
            </value>
            <value>
                <fullName>1000-3000</fullName>
            </value>
            <value>
                <fullName>3000-6000</fullName>
            </value>
            <value>
                <fullName>6000-8000</fullName>
            </value>
            <value>
                <fullName>8000-10000</fullName>
            </value>
            <value>
                <fullName>&gt;10000</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>