force-app/main/default/objects/S_P_Vendors__c/fields/Below_then_authorized_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Below_then_authorized_decision_maker__c</fullName>
    <inlineHelpText>Is the customer contact name below then authorized decision maker?</inlineHelpText>
    <label>Below then authorized decision maker?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>