force-app/main/default/objects/S_P_Vendors__c/fields/Business_need_driving_this_purchase__c.field-meta.xml
<CustomField>
    <fullName>Business_need_driving_this_purchase__c</fullName>
    <label>Business need driving this purchase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>