force-app/main/default/objects/S_P_Vendors__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Repeat Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>