force-app/main/default/objects/S_P_Vendors__c/fields/CIO_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>CIO_Sponsorship__c</fullName>
    <description>This picklist field to show on VMware S&amp;P Vendor page layout and the information captured by Sales Users on the VMware S&amp;P Vendor records and the info can be sent to VMware, via Boomi integration, to increase chances of a successful registration.</description>
    <inlineHelpText>Does the CIO support this purchase?</inlineHelpText>
    <label>CIO Sponsorship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>