force-app/main/default/objects/S_P_Vendors__c/fields/CommVault_Budgeted_Project__c.field-meta.xml
<CustomField>
    <fullName>CommVault_Budgeted_Project__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CommVault Budgeted Project</label>
    <type>Checkbox</type>
</CustomField>