force-app/main/default/objects/S_P_Vendors__c/fields/CommVault_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CommVault_Close_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommVault Close Date</label>
    <type>Date</type>
</CustomField>