force-app/main/default/objects/S_P_Vendors__c/fields/CommVault_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>CommVault_Stage_Name__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommVault Stage Name</label>
    <type>Text</type>
</CustomField>