force-app/main/default/objects/S_P_Vendors__c/fields/CommVault_Wants_to_Speak_with_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>CommVault_Wants_to_Speak_with_Sales_Rep__c</fullName>
    <defaultValue>&apos;Yes&apos;</defaultValue>
    <label>CommVault Wants to Speak with Sales Rep?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>