force-app/main/default/objects/S_P_Vendors__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>Opportunity__r.Account.NumberOfEmployees</formula>
    <label>Company Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>