force-app/main/default/objects/S_P_Vendors__c/fields/Competing_Products_include_part_numbers__c.field-meta.xml
<CustomField>
    <fullName>Competing_Products_include_part_numbers__c</fullName>
    <label>Competing Products(include part numbers)</label>
    <type>TextArea</type>
</CustomField>