force-app/main/default/objects/S_P_Vendors__c/fields/Competitive_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Displacement__c</fullName>
    <label>Competitive Displacement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>