force-app/main/default/objects/S_P_Vendors__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>First Name &amp; Last Name</inlineHelpText>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>