force-app/main/default/objects/S_P_Vendors__c/fields/Current_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor__c</fullName>
    <inlineHelpText>Enter Current Security Provider</inlineHelpText>
    <label>Current Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>