force-app/main/default/objects/S_P_Vendors__c/fields/Current_Version_Solution_P2V__c.field-meta.xml
<CustomField>
    <fullName>Current_Version_Solution_P2V__c</fullName>
    <label>Current Version Solution (P2V)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>