force-app/main/default/objects/S_P_Vendors__c/fields/Currently_a_Dell_printer_customer__c.field-meta.xml
<CustomField>
    <fullName>Currently_a_Dell_printer_customer__c</fullName>
    <label>Currently a Dell printer customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>