force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Customer_Decision_Maker__c</fullName>
    <inlineHelpText>Mandatory if ELA is selected for Program Type</inlineHelpText>
    <label>Customer Decision Maker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>