force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Domain__c.field-meta.xml
<CustomField>
    <fullName>Customer_Domain__c</fullName>
    <description>This text field to show on VMware S&amp;P Vendor page layout and the information captured by Sales Users on the VMware S&amp;P Vendor records and the info can be sent to VMware, via Boomi integration, to increase chances of a successful registration.</description>
    <inlineHelpText>Text following @ in customer email address, ex. dell.com</inlineHelpText>
    <label>Customer Domain</label>
    <length>254</length>
    <type>Text</type>
</CustomField>