force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Market_Segment__c</fullName>
    <description>Add editable pick list field: Customer Market Segment [located below Opportunity Source] and default value to Commercial</description>
    <label>Customer Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>US Federal</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>