force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>