force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Local__c</fullName>
    <inlineHelpText>For non-Latin characters, like Chinese</inlineHelpText>
    <label>Customer Name Local</label>
    <length>100</length>
    <type>Text</type>
</CustomField>