force-app/main/default/objects/S_P_Vendors__c/fields/Customer_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Use_Case__c</fullName>
    <label>Customer Use Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>