force-app/main/default/objects/S_P_Vendors__c/fields/CustomerTryingToSolve__c.field-meta.xml
<CustomField>
    <fullName>CustomerTryingToSolve__c</fullName>
    <inlineHelpText>What is the issue uncovered that this solution will solve for your customer?</inlineHelpText>
    <label>What is your customer trying to solve?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>