force-app/main/default/objects/S_P_Vendors__c/fields/Date_of_first_engagement_on_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_engagement_on_opportunity__c</fullName>
    <label>Date of first engagement on opportunity</label>
    <type>Date</type>
</CustomField>