force-app/main/default/objects/S_P_Vendors__c/fields/Date_of_meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_meeting__c</fullName>
    <defaultValue>DATE(year(TODAY()),month(TODAY()),day(TODAY()))</defaultValue>
    <label>Date of meeting</label>
    <type>Date</type>
</CustomField>