force-app/main/default/objects/S_P_Vendors__c/fields/Deal_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expiration_Date__c</fullName>
    <label>Deal Expiration Date</label>
    <type>Date</type>
</CustomField>