force-app/main/default/objects/S_P_Vendors__c/fields/Dell_Initiated_Deal__c.field-meta.xml
<CustomField>
    <fullName>Dell_Initiated_Deal__c</fullName>
    <label>Dell Initiated Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>