force-app/main/default/objects/S_P_Vendors__c/fields/Dell_Leading_Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Dell_Leading_Professional_Services__c</fullName>
    <inlineHelpText>Select yes to indicate intent to sell Dell delivered professional services for VMware products registered</inlineHelpText>
    <label>Dell Leading Professional Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>