force-app/main/default/objects/S_P_Vendors__c/fields/Dell_Technical_Lead_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Dell_Technical_Lead_Email_Address__c</fullName>
    <label>Dell Technical Lead Email Address</label>
    <type>Email</type>
</CustomField>