force-app/main/default/objects/S_P_Vendors__c/fields/Dell_Technical_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Dell_Technical_Lead_Name__c</fullName>
    <label>Dell Technical Lead Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>