force-app/main/default/objects/S_P_Vendors__c/fields/Describe_delivery_schedule__c.field-meta.xml
<CustomField>
    <fullName>Describe_delivery_schedule__c</fullName>
    <label>Describe delivery schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>