force-app/main/default/objects/S_P_Vendors__c/fields/Dev_Fund_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Dev_Fund_Utilized__c</fullName>
    <label>Dev Fund Utilized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>