force-app/main/default/objects/S_P_Vendors__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <inlineHelpText>Distributor name cannot be changed after this form submitted at “Sent to Vendor” stage.</inlineHelpText>
    <label>Distributor Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABnet Communications</fullName>
            </value>
            <value>
                <fullName>Abris Distribution Inc</fullName>
            </value>
            <value>
                <fullName>Acao Informatica Brasil Ltda.</fullName>
            </value>
            <value>
                <fullName>Actebis Peacock GmbH</fullName>
            </value>
            <value>
                <fullName>Adistec Chile S.P.A.</fullName>
            </value>
            <value>
                <fullName>Adistec Colombia S.A.S</fullName>
            </value>
            <value>
                <fullName>Adistec Corp</fullName>
            </value>
            <value>
                <fullName>Adistec Peru S.A.C.</fullName>
            </value>
            <value>
                <fullName>Adistectech S.A.</fullName>
            </value>
            <value>
                <fullName>Afina</fullName>
            </value>
            <value>
                <fullName>Afina/Westcon Brasil</fullName>
            </value>
            <value>
                <fullName>Afina/Westcon Portugal</fullName>
            </value>
            <value>
                <fullName>Afina/Westcon Spain</fullName>
            </value>
            <value>
                <fullName>Afina Chile</fullName>
            </value>
            <value>
                <fullName>Afina Mexico</fullName>
            </value>
            <value>
                <fullName>Afina Venezuela</fullName>
            </value>
            <value>
                <fullName>ALSO</fullName>
            </value>
            <value>
                <fullName>Also Lietuva UAB</fullName>
            </value>
            <value>
                <fullName>ALSO Schweiz AG</fullName>
            </value>
            <value>
                <fullName>Altimate</fullName>
            </value>
            <value>
                <fullName>Altimate Belgium s.p.r.l</fullName>
            </value>
            <value>
                <fullName>Altimate BeLux</fullName>
            </value>
            <value>
                <fullName>Appleby Solutions Ltd</fullName>
            </value>
            <value>
                <fullName>Aptec</fullName>
            </value>
            <value>
                <fullName>APTEC DISTRIBUTION FZ-LLC</fullName>
            </value>
            <value>
                <fullName>Aptec Distribution SA LTd</fullName>
            </value>
            <value>
                <fullName>Aptec Egypt LLC</fullName>
            </value>
            <value>
                <fullName>Aptec Lebanon S.A.L.</fullName>
            </value>
            <value>
                <fullName>Aptec Saudi Arabia LLC</fullName>
            </value>
            <value>
                <fullName>Armada Bilgisayar Sistemleri San Ve. TIC AS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>