force-app/main/default/objects/S_P_Vendors__c/fields/Do_you_need_vendor_support_on_the_toner__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_vendor_support_on_the_toner__c</fullName>
    <label>Do you need vendor support on the toner?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>