force-app/main/default/objects/S_P_Vendors__c/fields/Does_the_Customer_have_Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Customer_have_Approved_Budget__c</fullName>
    <label>Does the Customer have Approved Budget?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>